--- a/source/NorionTest/2. Application/NorionTest.Application/NorionTest.Application.csproj
+++ b/source/NorionTest/2. Application/NorionTest.Application/NorionTest.Application.csproj
@@ -6,4 +6,8 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\..\1. Domain\NorionTest.Domain\NorionTest.Domain.csproj" />
+    </ItemGroup>
+
 </Project>
