--- a/source/NorionTest/3. Infrastructure/NorionTest.Infrastructure/NorionTest.Infrastructure.csproj
+++ b/source/NorionTest/3. Infrastructure/NorionTest.Infrastructure/NorionTest.Infrastructure.csproj
@@ -6,4 +6,9 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\..\1. Domain\NorionTest.Domain\NorionTest.Domain.csproj" />
+      <ProjectReference Include="..\..\2. Application\NorionTest.Application\NorionTest.Application.csproj" />
+    </ItemGroup>
+
 </Project>
